feat: Add users get, post, delete methods (#135)
* docker fixes

* fixes

* feat: implement user management with password hashing and retrieval

* feat: implement soft delete for users with foreign key constraint checks

* Refactor API and Database Migrations

- Updated OpenAPI specification to correct user deletion response and adjust example for full name.
- Changed shutdown timeout constant to a more generic default timeout in server and API handler.
- Added new crypto dependency in go.mod.
- Modified MongoDB migrations to update pet status field definition and added new indexes for user and lease collections.
- Created new lease collection and corresponding index migrations.
- Implemented advisory lock mechanism in the leases database operations.
- Refactored user deletion logic to utilize advisory locks for better concurrency control.
- Updated generated Swagger specification to reflect recent changes.

* feat: update uniqueID type in performAdvisoryLockDBOperation and enhance DeleteUser logic with advisory locking

* sa fixes

* Refactor user management API to use user ID instead of username

- Updated AddUser method to convert Email to string type.
- Refactored GetUser method to accept userID and query by BSON ObjectID.
- Modified DeleteUser method to accept userID and query by BSON ObjectID.
- Removed username-based user retrieval and deletion methods from the server interface.
- Updated server middleware to handle new user management routes.
- Adjusted Swagger documentation to reflect changes in user API endpoints.
- Changed UserSchema and UserRequest to use openapi_types.Email for Email field.

* sa fixes
